--- a/style/master.scss
+++ b/style/master.scss
@@ -2,6 +2,7 @@
 @import "_scss/typography";
 @import "_scss/forms";
 @import "_scss/inputs";
+@import "_scss/figures";
 @import "_scss/tables";
 @import "_scss/layouts";
 @import "_scss/header";
