--- a/style/master.css
+++ b/style/master.css
@@ -664,10 +664,10 @@ fieldset.range input[type=range]::-moz-range-track {
 fieldset.range input[type=range]::-webkit-slider-thumb {
   width: 1rem;
   height: 1rem;
+  margin-top: -0.375rem;
   border: 1px solid var(--color--border);
   border-radius: 100%;
   background-color: var(--color--bg-light-content);
-  margin-top: -0.375rem;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -786,22 +786,20 @@ fieldset.toggle input[type=checkbox]:checked:disabled:after {
   background-color: var(--color--status-disabled);
 }
 
-fieldset.range input[type=range] {
+fieldset.range input[type=range]:disabled {
   accent-color: var(--color--status-disabled);
 }
-fieldset.range input[type=range]::-webkit-slider-runnable-track {
+fieldset.range input[type=range]:disabled::-webkit-slider-runnable-track {
   background-color: var(--color--status-disabled);
 }
-fieldset.range input[type=range]::-moz-range-track {
+fieldset.range input[type=range]:disabled::-moz-range-track {
   background-color: var(--color--status-disabled);
 }
-fieldset.range input[type=range]::-webkit-slider-thumb {
+fieldset.range input[type=range]:disabled::-webkit-slider-thumb {
   border-color: var(--color--status-disabled);
-  background-color: var(--color--status-disabled);
 }
-fieldset.range input[type=range]::-moz-range-thumb {
+fieldset.range input[type=range]:disabled::-moz-range-thumb {
   border-color: var(--color--status-disabled);
-  background-color: var(--color--status-disabled);
 }
 
 html.dark input:disabled,
@@ -829,22 +827,20 @@ html.dark fieldset.toggle input[type=checkbox]:disabled:after,
 html.dark fieldset.toggle input[type=checkbox]:checked:disabled:after {
   background-color: var(--color--status-disabled-dark);
 }
-html.dark fieldset.range input[type=range] {
+html.dark fieldset.range input[type=range]:disabled {
   accent-color: var(--color--status-disabled-dark);
 }
-html.dark fieldset.range input[type=range]::-webkit-slider-runnable-track {
+html.dark fieldset.range input[type=range]:disabled::-webkit-slider-runnable-track {
   background-color: var(--color--status-disabled-dark);
 }
-html.dark fieldset.range input[type=range]::-moz-range-track {
+html.dark fieldset.range input[type=range]:disabled::-moz-range-track {
   background-color: var(--color--status-disabled-dark);
 }
-html.dark fieldset.range input[type=range]::-webkit-slider-thumb {
+html.dark fieldset.range input[type=range]:disabled::-webkit-slider-thumb {
   border-color: var(--color--status-disabled-dark);
-  background-color: var(--color--status-disabled-dark);
 }
-html.dark fieldset.range input[type=range]::-moz-range-thumb {
+html.dark fieldset.range input[type=range]:disabled::-moz-range-thumb {
   border-color: var(--color--status-disabled-dark);
-  background-color: var(--color--status-disabled-dark);
 }
 
 input:invalid,
