Lab report updates

--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -42,6 +42,79 @@
   <main>
     <article>
       <h1>Mapping</h1>
+      <section>
+        <h2>Yale Medical Center</h2>
+        <div class="row cards">
+          <div class="card">
+            <h3>Yale Medical Center INT-1</h3>
+            <ul class="options">
+              <li>ADT Patient Data
+                <span class="action">
+                  <span class="status invalid">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M5 12l5 5l10 -10"></path>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M12 19v.01"></path>
+                      <path d="M12 15v-10"></path>
+                    </svg>
+                  </span>
+                  <!-- <a href="" class="button tertiary">Edit</a> -->
+                  <button class="tertiary" disabled="">Edit</button>
+                </span>
+              </li>
+              <li>Lab Results
+                <span class="action">
+                  <span class="status valid">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M5 12l5 5l10 -10"></path>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M12 19v.01"></path>
+                      <path d="M12 15v-10"></path>
+                    </svg>
+                  </span>
+                  <a href="projects/amen/views/mapping/lab-results/index.html" class="button tertiary">Edit</a>
+                  <!-- <button class="tertiary" disabled>Edit</button> -->
+                </span>
+              </li>
+              <li>Order Requests
+                <span class="action">
+                  <span class="status invalid">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M5 12l5 5l10 -10"></path>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M12 19v.01"></path>
+                      <path d="M12 15v-10"></path>
+                    </svg>
+                  </span>
+                  <!-- <a href="" class="button tertiary">Edit</a> -->
+                  <button class="tertiary" disabled="">Edit</button>
+                </span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </article>
   </main>
   <footer>
