--- a/style/_scss/_cards.scss
+++ b/style/_scss/_cards.scss
@@ -207,6 +207,21 @@ html.dark {
         }
       }
 
+      span.icon {
+        display: flex;
+        width: 1rem;
+        height: 1rem;
+        margin: 0 $spacing-4;
+        padding: 0;
+        color: inherit;
+
+        svg {
+          width: 100%;
+          height: 100%;
+          stroke-width: 1.5;
+        }
+      }
+
       button,
       .button {
         margin: 0;
