--- a/style/master.css
+++ b/style/master.css
@@ -855,6 +855,18 @@ pre {
   font-family: monospace;
 }
 
+code {
+  padding: var(--spacing--4);
+  border-radius: var(--border-radius-xs);
+  font-family: monospace;
+  font-size: var(--small);
+  background-color: var(--color--bg-light);
+}
+
+html.dark code {
+  background-color: var(--color--border);
+}
+
 table {
   width: 100%;
   margin: var(--spacing--8) 0 0;
@@ -1159,6 +1171,19 @@ html.dark form.color-mode fieldset label input[type=checkbox]:checked:after {
   max-width: none;
   max-height: none;
   opacity: 1;
+}
+.card ul.options li span.icon {
+  display: flex;
+  width: 1rem;
+  height: 1rem;
+  margin: 0 var(--spacing--4);
+  padding: 0;
+  color: inherit;
+}
+.card ul.options li span.icon svg {
+  width: 100%;
+  height: 100%;
+  stroke-width: 1.5;
 }
 .card ul.options li button,
 .card ul.options li .button {
