--- a/style/_scss/_figures.scss
+++ b/style/_scss/_figures.scss
@@ -12,6 +12,7 @@ code {
   border-radius: $border-radius-xs;
   font-family: monospace;
   font-size: $small;
+  line-height: 1;
   background-color: $color--bg-light;
 }
 
